# msrv-rs

./: Cargo.toml  README.md  cargo-resolver-hook
src/: lib.rs  main.rs
