[package]
name = "msrv-rs"
version = "0.1.0"
authors = ["est31 <MTest31@outlook.com>"]
edition = "2018"
license = "Apache-2.0 OR MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"

[lib]
name = "cargo_resolver_hook"
crate-type = ["dylib"]
